--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href='css/style.css'>
+    <link rel="stylesheet" href='css/style.css'> 
     <link rel="stylesheet" href='css/carousel.css'>
     <script defer src="js/index.js" type="module"></script>
 
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div class='title container mx-auto p-5'>
-        <img src='title.svg' alt='Computer Science is GOOD'>
+        <img src='title.svg' alt='Computer Science is GOOD'> <!--Very nice title-->
     </div>
 
     <div id = "article-navbar" class="container py-3">
@@ -85,5 +85,21 @@
 
     <div id = "about-us-container" class = "container mb-5"></div>
 </body>
+
+<!-- 
+Content was good, easy to read.
+Visuals were excellent nice use of js and css to make website nice looking and accessible
+In the beginning there was good contribution by all members however lots of last minute changes made by 1 person... joe...
+Healthcare has some misspellongs which will not be toleratedd
+Website works well and is consistent.
+
+Exemplary
+Perfect
+Oustanding
+Perfect
+Excellent
+
+-->
+
 
 </html>
